--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,50 @@
+body{
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background: rgb(75,129,171);
+  background: linear-gradient(180deg,  rgba(56,47,96,1) 0%, rgba(75,129,171,1) 100%);  
+}
 .nav{
-  display: flex;
-  background-color: antiquewhite;
+  display: grid;
+  grid-template-columns: 3fr 6fr;
   gap: 10px;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  padding: 10px;
+  background-color: #150920;
 }
-body{
-  margin: 0;
-  padding: 0;
+.logo{
+    display: flex;
+    gap: 10px;
+    justify-content: start;
+    align-items: center;
+    padding-left:3%;
 }
+
 h1,h2,h3,h4{
   padding: 0;
   margin: 0;
+}
+.heroTitle{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: white;
+  transition: color 0.15s ease-in; 
+}
+.heroTitle:hover{
+  color: #FFCD29;
+}
+.introduction{
+  color: #FFCD29;
+  background-color: #110017;
+  font-size: 2em;
+  display: flex;
+  margin: 60px 300px 0px 300px;
+  padding: 30px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+a:link {
+  text-decoration: none; 
 }
