--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@ a:link {
 form{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap:15px
+  gap: 15px;
 }
 .formSection{
   display: flex;
@@ -95,4 +95,9 @@ form{
 }
 .desc{
   grid-column: 1/-1;
+}
+textarea{
+  /* resize: none; */
+  min-width: 400px;
+  min-height: 80px;
 }
