--- a/app/globals.css
+++ b/app/globals.css
@@ -154,7 +154,7 @@ textarea{
   grid-column: 1/-1;
   align-self: flex-end;
 }
-.add, .remove{
+.add, .remove, .delete{
   background-color: rgba(0,0,0,0.15);
   background-image: url('../public/plus.svg');
   background-size: cover;
@@ -164,6 +164,14 @@ textarea{
   font-size: large;
   border-radius: 5px;
   transition: background-color 0.1s ease-in-out, background-image 0.1s ease-in-out;
+}
+.delete{
+  margin-left: 10px;
+  background-image: url('../public/delete.svg');
+}
+.delete:hover{
+  background-image: url('../public/delete2.svg');
+  cursor: pointer;
 }
 .remove{
   background-image: url('../public/minus.svg');
@@ -233,4 +241,48 @@ textarea{
   padding-left: 10%;
 }
 .billing{
+  height: max-content;
+  width: 70%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+.orderDetails{
+  background-color: #b8b8b8;
+  padding-top: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap:15px
+}
+
+/* CSS */
+.button-54 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+@media (min-width: 768px) {
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
 }
